<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_22sdp">

            <TextView
                android:id="@+id/tv_recipe_input_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_copy_link_image"
                android:textColor="@color/black_font"
                android:textSize="@dimen/_14ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text">

                <EditText
                    android:id="@+id/et_recipe_input_link"
                    style="@style/EditTextStyleSingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_hint_recipe_name"
                android:textColor="@color/black_font"
                android:textSize="@dimen/_14ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text">

                <EditText
                    android:id="@+id/et_recipe_name"
                    style="@style/EditTextStyleSingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_recipe_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_recipe_categories"
                android:textColor="@color/black_font"
                android:textSize="@dimen/_14ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text">

                <Spinner
                    android:id="@+id/spinner_categories"
                    style="@style/SpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:entries="@array/categories" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_hint_recipe_ingredients"
                android:textColor="@color/black_font"
                android:textSize="@dimen/_14ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text">

                <EditText
                    android:id="@+id/et_recipe_ingredients"
                    style="@style/EditTextStyleMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_recipe_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_recipe_instructions"
                android:textColor="@color/black_font"
                android:textSize="@dimen/_14ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text">

                <EditText
                    android:id="@+id/et_recipe_instructions"
                    style="@style/EditTextStyleMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_recipe"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/btn_save_recipe" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>