<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginBottom="@dimen/_6sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_img"
        android:layout_width="100dp"
        android:layout_height="80dp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_blackberry_fool"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_title_food"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toEndOf="@id/cv_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_title_tags"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@id/cv_img"
        app:layout_constraintTop_toBottomOf="@id/tv_title_food" />

    <View
        android:id="@+id/view_dashed"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@drawable/ic_line_dashed"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="@id/tv_title_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_tag"/>

    <TextView
        android:id="@+id/tv_title_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_title_area"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@id/cv_img"
        app:layout_constraintTop_toBottomOf="@id/view_dashed"
        app:layout_constraintBottom_toBottomOf="@id/cv_img"/>

</androidx.constraintlayout.widget.ConstraintLayout>