<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_recipe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_blackberry_fool" />

            <LinearLayout
                android:id="@+id/ll_detail_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_recipe">

                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/_16ssp"
                    tools:text="Teriyaki Chicken Casserole" />

                <TextView
                    android:id="@+id/tv_category_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/_14ssp"
                    tools:text="Chicken" />

                <TextView
                    android:id="@+id/tv_title_ingredients_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/text_title_ingredients_detail"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tv_ingredient_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/_14ssp"
                    tools:text="Chicken" />

                <TextView
                    android:id="@+id/tv_title_instructions_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/text_title_instructions_title"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tv_instruction_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black_font"
                    android:textSize="@dimen/_14ssp"
                    tools:text="Chicken" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update_detail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_22sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_update_detail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:backgroundTint="@color/primary"
                    app:cornerRadius="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>